--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,1 +1,18 @@
 project_id = "zpiihnwkiapprhnqjzkm"
+
+[functions.opportunity-email]
+enabled = true
+verify_jwt = false
+import_map = "./functions/opportunity-email/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/opportunity-email/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/opportunity-email/*.html" ]
+
+[functions.opportunity-email-public]
+enabled = true
+verify_jwt = false
+import_map = "./functions/opportunity-email-public/deno.json"
+entrypoint = "./functions/opportunity-email-public/index.ts"
